2004-03-01  Michael Natterer  <mitch@gimp.org>

	* gtk/gtktextbtree.c: removed underscores from calls to
	gtk_text_btree_resolve_bidi().

Mon Mar  1 10:41:27 2004  Owen Taylor  <otaylor@redhat.com>

	Patch from Dov Grobgeld to implement auto-bidi-direction
	for GtkTextView (#118543)

	* gtk/gtktextbtree.[ch]: Resolve bidi base direction
	for each line by propagating backwards/forwards as
	necessary.

	* gtk/gtktextlayout.[ch] gtk/gtktextview.c: Set the 
	bidi base direction for the ;ine with the cursor from 
	the keyboard direction. Add gtk_text_layout_set_keyboard_direction().
	
Mon Mar  1 10:31:11 2004  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkentry.[ch]: Implement auto-bidi-direction,
	based on a patch from Dov Grobgeld. (#118540)

Sun Feb 29 22:01:49 2004  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkentry.[ch]: Add gtk_entry_set_alignment() 
	to allow right-aligned entries and a "xalign" 
	property. (#59799, patch from Egon Andersen and 
	Steffen Gutmann)

	* gtk/gtkmisc.c (gtk_misc_class_init): Use improved
	xalign property description here too.

	* tests/testtext.c: UNDERLINE_ERROR test addition
	from Nicolas Settons' patch.

Sun Feb 29 20:34:06 2004  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkwindow.[ch] gtk/gtkmenushellx.c: export
	gtk_window_activate_key() (Request from Tim Janik)

Mon Mar  1 01:00:11 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtktextview.c (gtk_text_view_drag_data_received): 
	Make DND operations within a buffer move the dragged 
	text instead of copying it; also make DND operations 
	a single user action for undo purposes.  (#135191, 
	#93139, reported by Tommi Komulainen, patch by Paolo 
	Borelly and Paolo Maggi)

Mon Mar  1 00:51:11 2004  Matthias Clasen  <maclas@gmx.de>

	* NEWS: News for 2.3.5.

Sun Feb 29 23:25:35 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkentry.c (gtk_entry_completion_key_press): 
	Fix the Shift-Tab support to go backwards.

Sun Feb 29 16:40:40 2004  Owen Taylor  <otaylor@redhat.com>
